--- a/Install Required Dependencies.ipynb
+++ b/Install Required Dependencies.ipynb
@@ -2,9 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting ipython-sql\n",
+      "  Downloading ipython_sql-0.5.0-py3-none-any.whl.metadata (17 kB)\n",
+      "Collecting prettytable (from ipython-sql)\n",
+      "  Downloading prettytable-3.13.0-py3-none-any.whl.metadata (30 kB)\n",
+      "Requirement already satisfied: ipython in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from ipython-sql) (8.31.0)\n",
+      "Collecting sqlalchemy>=2.0 (from ipython-sql)\n",
+      "  Downloading SQLAlchemy-2.0.37-cp313-cp313-win_amd64.whl.metadata (9.9 kB)\n",
+      "Collecting sqlparse (from ipython-sql)\n",
+      "  Downloading sqlparse-0.5.3-py3-none-any.whl.metadata (3.9 kB)\n",
+      "Requirement already satisfied: six in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from ipython-sql) (1.17.0)\n",
+      "Collecting ipython-genutils (from ipython-sql)\n",
+      "  Downloading ipython_genutils-0.2.0-py2.py3-none-any.whl.metadata (755 bytes)\n",
+      "Collecting greenlet!=0.4.17 (from sqlalchemy>=2.0->ipython-sql)\n",
+      "  Downloading greenlet-3.1.1-cp313-cp313-win_amd64.whl.metadata (3.9 kB)\n",
+      "Collecting typing-extensions>=4.6.0 (from sqlalchemy>=2.0->ipython-sql)\n",
+      "  Downloading typing_extensions-4.12.2-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from ipython->ipython-sql) (0.4.6)\n",
+      "Requirement already satisfied: decorator in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from ipython->ipython-sql) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from ipython->ipython-sql) (0.19.2)\n",
+      "Requirement already satisfied: matplotlib-inline in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from ipython->ipython-sql) (0.1.7)\n",
+      "Requirement already satisfied: prompt_toolkit<3.1.0,>=3.0.41 in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from ipython->ipython-sql) (3.0.50)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from ipython->ipython-sql) (2.19.1)\n",
+      "Requirement already satisfied: stack_data in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from ipython->ipython-sql) (0.6.3)\n",
+      "Requirement already satisfied: traitlets>=5.13.0 in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from ipython->ipython-sql) (5.14.3)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from prettytable->ipython-sql) (0.2.13)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from jedi>=0.16->ipython->ipython-sql) (0.8.4)\n",
+      "Requirement already satisfied: executing>=1.2.0 in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from stack_data->ipython->ipython-sql) (2.2.0)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from stack_data->ipython->ipython-sql) (3.0.0)\n",
+      "Requirement already satisfied: pure-eval in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from stack_data->ipython->ipython-sql) (0.2.3)\n",
+      "Downloading ipython_sql-0.5.0-py3-none-any.whl (20 kB)\n",
+      "Downloading SQLAlchemy-2.0.37-cp313-cp313-win_amd64.whl (2.1 MB)\n",
+      "   ---------------------------------------- 0.0/2.1 MB ? eta -:--:--\n",
+      "   ----- ---------------------------------- 0.3/2.1 MB ? eta -:--:--\n",
+      "   ------------------------- -------------- 1.3/2.1 MB 3.9 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 2.1/2.1 MB 4.5 MB/s eta 0:00:00\n",
+      "Downloading ipython_genutils-0.2.0-py2.py3-none-any.whl (26 kB)\n",
+      "Downloading prettytable-3.13.0-py3-none-any.whl (31 kB)\n",
+      "Downloading sqlparse-0.5.3-py3-none-any.whl (44 kB)\n",
+      "Downloading greenlet-3.1.1-cp313-cp313-win_amd64.whl (299 kB)\n",
+      "Downloading typing_extensions-4.12.2-py3-none-any.whl (37 kB)\n",
+      "Installing collected packages: ipython-genutils, typing-extensions, sqlparse, prettytable, greenlet, sqlalchemy, ipython-sql\n",
+      "Successfully installed greenlet-3.1.1 ipython-genutils-0.2.0 ipython-sql-0.5.0 prettytable-3.13.0 sqlalchemy-2.0.37 sqlparse-0.5.3 typing-extensions-4.12.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.3.1 -> 25.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "# Required for Notebook to use SQL Magic\n",
     "# Facilitates to run queries from Notebooks \n",
@@ -14,9 +73,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting psycopg2-binary\n",
+      "  Downloading psycopg2_binary-2.9.10-cp313-cp313-win_amd64.whl.metadata (4.8 kB)\n",
+      "Downloading psycopg2_binary-2.9.10-cp313-cp313-win_amd64.whl (2.6 MB)\n",
+      "   ---------------------------------------- 0.0/2.6 MB ? eta -:--:--\n",
+      "   ---- ----------------------------------- 0.3/2.6 MB ? eta -:--:--\n",
+      "   ------------ --------------------------- 0.8/2.6 MB 2.7 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 1.8/2.6 MB 3.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 2.6/2.6 MB 3.6 MB/s eta 0:00:00\n",
+      "Installing collected packages: psycopg2-binary\n",
+      "Successfully installed psycopg2-binary-2.9.10\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.3.1 -> 25.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Native Postgres Library to connect to Posgres Database Server\n",
@@ -25,9 +111,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: sqlalchemy in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (2.0.37)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from sqlalchemy) (3.1.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.0 in c:\\users\\fabritgm\\desktop\\python-for-data-engineering\\files_to_database_loader_handout\\pry2\\lib\\site-packages (from sqlalchemy) (4.12.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.3.1 -> 25.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# SQLAlchemy is ORM and needs native database libraries (psycopg2)\n",
@@ -43,7 +149,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.1"
   }
  },
